--- a/todo-client/src/styles/Register.module.scss
+++ b/todo-client/src/styles/Register.module.scss
@@ -13,7 +13,7 @@
     position: relative;
     p {
       position: absolute;
-      bottom: 100%;
+      bottom: 120%;
       right: 50%;
       transform: translate(50%);
       width: 100%;
